--- a/html/User_pengembalian.html
+++ b/html/User_pengembalian.html
@@ -4,45 +4,181 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Card Layout</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
+        /* General body styling */
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .container {
+            font-family: Arial, sans-serif;
             display: flex;
-            flex-wrap: wrap;
+        }
+
+        /* Sidebar styles */
+        #nav-bar {
+            width: 250px;
+            height: 100vh;
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+        }
+
+        #nav-header {
+            background-color: #34495e;
+            padding: 1.5rem;
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            border-bottom: 1px solid #ecf0f1;
+        }
+
+        #nav-header a {
+            color: #ecf0f1;
+            text-decoration: none;
+        }
+
+        #nav-content {
+            flex: 1;
+            padding: 1rem 0;
+        }
+
+        .nav-button {
+            display: flex;
+            align-items: center;
+            padding: 1rem 1.5rem;
+            color: #ecf0f1;
+            text-decoration: none;
+            font-size: 1.2rem;
+            border-radius: 0.5rem;
+            margin: 0.5rem 1rem;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-button i {
+            margin-right: 1rem;
+        }
+
+        .nav-button:hover {
+            background-color: #3e5062;
+        }
+
+        /* Logout button */
+        .logout-button {
+            margin: 1rem;
+            padding: 1rem;
+            text-align: center;
+            background-color: #e74c3c;
+            color: #ecf0f1;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .logout-button:hover {
+            background-color: #c0392b;
+        }
+
+        /* Main content styles */
+        #main-content {
+            margin-left: 250px;
+            padding: 2rem;
+            flex: 1;
+            background-color: #f8f9fa;
+        }
+
+         /* Container for cards */
+         .container {
+            display: grid;
+            grid-template-rows: repeat(3, auto); /* 3 baris */
+            grid-template-columns: 1fr 1fr 1fr; /* 3 kolom */
             gap: 16px;
             padding: 20px;
+            justify-items: stretch;
+            align-items: stretch;
         }
+
+        /* Card styles */
         .card {
-            background-color: #f4f4f4;
-            border: 1px solid #ddd;
+            background-color: #ffffff;
+            color: #333;
             border-radius: 8px;
-            width: calc(33.333% - 16px); /* Tiga kolom */
+            border: 1px solid #ddd;
             padding: 16px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: transform 0.2s ease;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
+
         .card:hover {
-            transform: scale(1.05);
+            transform: translateY(-5px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
         .card h3 {
-            margin: 0;
-            font-size: 18px;
+            margin: 0 0 8px;
+            font-size: 16px;
+            font-weight: bold;
         }
+
         .card p {
-            margin: 8px 0;
+            margin: 0;
             font-size: 14px;
-            color: #555;
+            color: #666;
+        }
+
+        /* Responsive design for cards */
+        @media (max-width: 768px) {
+            .card {
+                width: calc(50% - 16px);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .card {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container" id="dataContainer"></div>
+    <!-- Sidebar -->
+    <div id="nav-bar">
+        <div id="nav-header">
+            <a href="#">Peminjaman Barang</a>
+        </div>
+        <div id="nav-content">
+            <a class="nav-button" href="User_beranda.html">
+                <i class="fas fa-home"></i>
+                Home
+            </a>
+            <a class="nav-button" href="User_peminjaman.html">
+                <i class="fas fa-book"></i>
+                Peminjaman
+            </a>
+            <a class="nav-button" href="User_pengembalian.html">
+                <i class="fas fa-undo"></i>
+                Pengembalian
+            </a>
+        </div>
+        <button id ="logout" class="logout-button">Logout</button>
+    </div>
+
+    <!-- Main Content -->
+    <div id="main-content">
+        <h1>Daftar Nama Barang</h1>
+        <div class="container" id="dataContainer">
+            <!-- Dynamic cards will be injected here -->
+        </div>
+    </div>
+
+    <!-- Script untuk pengolahan data -->
+     
     <script src="../js/script_user_pengembalian.js"></script>
 </body>
 </html>
+
+
+
+
