--- a/html/Admin_barang_edit.html
+++ b/html/Admin_barang_edit.html
@@ -4,91 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Data</title>
-    <style>
-           body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f6f8;
-        }
-
-        .detail-container {
-            background: #fff;
-            border: 1px solid #e0e0e0;
-            border-radius: 12px;
-            padding: 25px 35px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 100%;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        .detail-container:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        .detail-container h2 {
-            margin-bottom: 20px;
-            font-size: 26px;
-            color: #34495e;
-            text-align: center;
-        }
-
-        .detail-container form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .detail-container label {
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #34495e;
-            font-size: 14px;
-        }
-
-        .detail-container input {
-            margin-bottom: 15px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 14px;
-            width: 100%;
-            box-sizing: border-box;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .detail-container input:focus {
-            border-color: #3498db;
-            box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
-            outline: none;
-        }
-
-        .detail-container button {
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            background-color: #3498db;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .detail-container button:hover {
-            background-color: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .detail-container button:active {
-            transform: translateY(0);
-        }
-    </style>
+    <link rel="stylesheet" href="../css/style_admin_barang_edit.css">
 </head>
 <body>
     <div class="detail-container" id="detailContainer">
