--- a/html/Admin_barang_tambah.html
+++ b/html/Admin_barang_tambah.html
@@ -5,122 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tambah Barang - Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        /* Reset dan styling umum */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            height: 100vh;
-        }
-
-        /* Sidebar styling */
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: #ecf0f1;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            position: fixed;
-            height: 100%;
-            padding: 20px 0;
-        }
-
-        .sidebar .nav-buttons {
-            flex-grow: 1;
-        }
-
-        .sidebar button {
-            width: 100%;
-            padding: 15px 20px;
-            margin: 10px 0;
-            background-color: transparent;
-            color: #ecf0f1;
-            border: none;
-            text-align: left;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .sidebar button:hover {
-            background-color: #34495e;
-        }
-
-        .sidebar button i {
-            margin-right: 10px;
-        }
-
-        .logout-button {
-            margin: 10px 20px;
-            padding: 15px 20px;
-            background-color: #e74c3c;
-            color: #ecf0f1;
-            border: none;
-            text-align: center;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .logout-button:hover {
-            background-color: #c0392b;
-        }
-
-        /* Konten utama */
-        .content {
-            left: 10;
-            margin-left: 800px;
-            margin-top: 200px;
-            padding: 20px;
-            flex-grow: 1;
-            background-color: #f8f9fa;
-        }
-
-        .content h1 {
-            margin-bottom: 20px;
-        }
-
-        .form-container {
-            background: #ffffff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            margin: 0 auto;
-        }
-
-        .form-container input,.form-container button {
-            width: 100%;
-            margin-bottom: 15px;
-            padding: 10px;
-            font-size: 16px;
-        }
-
-        .form-container input {
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        .form-container button {
-            background-color: #2c3e50;
-            color: #ffffff;
-            border: none;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s ease;
-        }
-
-        .form-container button:hover {
-            background-color: #34495e;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/style_admin_barang_tambah.css">
 </head>
 <body>
     <div class="sidebar">
