--- a/html/User_transaksi.html
+++ b/html/User_transaksi.html
@@ -4,119 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Data</title>
+    <link rel="stylesheet" href="../css/style_user_transaksi.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            background-color: #f4f6f9;
-        }
-
-        .detail-container {
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-            margin-bottom: 20px;
-        }
-
-        .detail-container h2 {
-            margin: 0;
-            font-size: 22px;
-            color: #333;
-            text-align: center;
-        }
-
-        .input-container {
-            background: #fff;
-            border: 1px solid #ddd;
-            border-radius: 12px;
-            padding: 20px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
-        }
-
-        .input-container label {
-            display: block;
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 6px;
-        }
-
-        .input-container input,
-        .input-container select {
-            width: calc(100% - 20px);
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            font-size: 14px;
-            background-color: #f9f9f9;
-            transition: border-color 0.3s ease;
-        }
-
-        .input-container input:focus,
-        .input-container select:focus {
-            border-color: #3498db;
-            outline: none;
-        }
-
-        .input-container button {
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            background-color: #3498db;
-            color: white;
-            font-size: 16px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
-        }
-
-        .input-container button:hover {
-            background-color: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        .input-container button:active {
-            transform: translateY(0);
-        }
-
-        .input-container input[type="date"]::placeholder {
-            color: #aaa;
-            font-style: italic;
-        }
-
-        .input-container input[type="date"] {
-            text-align: left;
-        }
-
-        /* Responsif */
-        @media (max-width: 500px) {
-            .detail-container,
-            .input-container {
-                padding: 15px;
-            }
-            .input-container input,
-            .input-container select,
-            .input-container button {
-                font-size: 13px;
-                padding: 8px;
-            }
-            .input-container button {
-                font-size: 14px;
-            }
-        }
+       
     </style>
 </head>
 <body>
